<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".view.MainActivity"
    android:padding="20dp"
    >

    <!-- En-tête de la vue TextView pour le titre "Mesure de niveau de glucide" -->
    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/text"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- En-tête de la vue TextView pour l'âge "Votre age :" -->
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAgeText"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <!-- Barre de défilement pour sélectionner l'âge-->
    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="120" />
    <!-- Ligne de séparation -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape"
        />
    <!-- En-tête de la vue TextView pour la question -->
    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvQuestionText"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <!-- Groupe de boutons radio pour répondre à la question -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <!-- Bouton radio pour "Oui" -->
        <RadioButton
            android:id="@+id/rbtOui"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/ouiText"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <!-- Bouton radio pour "Non" -->
        <RadioButton
            android:id="@+id/rbtNon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/NonText"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>
    <!-- Champ de texte pour entrer une valeur -->
    <EditText
        android:id="@+id/etValeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/ValmText"
        android:inputType="numberDecimal"
        />
    <!-- Bouton pour consulter -->
    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnText"
        android:textSize="18sp"

        />
    <!--  Réponse -->
    <TextView
        android:id="@+id/tvReponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="40dp"
        android:text="..."
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>